--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aitor1995.proyecto">
+    package="com.aitor1995.galactic_journey">
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.aitor1995.galactic_journey.activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape">
             <intent-filter>
@@ -19,11 +19,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.JuegoActivity"
+            android:name="com.aitor1995.galactic_journey.activities.JuegoActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".activities.RecordsActivity"
+            android:name="com.aitor1995.galactic_journey.activities.RecordsActivity"
             android:label="@string/title_activity_records"/>
     </application>
 
